--- a/webpack.react.guide/package.json
+++ b/webpack.react.guide/package.json
@@ -10,8 +10,12 @@
   "author": "Bruce Lim",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.5.4",
     "babel-runtime": "5.6.18",
-    "react": "0.13.3"
+    "material-ui": "^0.10.4",
+    "react": "0.13.3",
+    "react-router": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7"
   },
   "devDependencies": {
     "babel-core": "5.6.18",
